// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlashMessage #renderMessage When error message array length larger than 1 Should render a list element for each error in the flash message 1`] = `
<div
  className="flash-message"
>
  <div
    className="alert alert-error"
  >
    <p />
    <ul>
      <li
        key="0"
      >
        Invalid email
      </li>
      <li
        key="1"
      >
        Username too short
      </li>
    </ul>
    <span
      className="close"
      data-test="close-flash-message"
      onClick={[Function]}
    >
      <strong>
        X
      </strong>
    </span>
  </div>
</div>
`;

exports[`FlashMessage #renderMessage When error message contains only a string Should render only one list item for the error in the flash message 1`] = `
<div
  className="flash-message"
>
  <div
    className="alert alert-error"
  >
    <p />
    <li>
      Invalid email
    </li>
    <span
      className="close"
      data-test="close-flash-message"
      onClick={[Function]}
    >
      <strong>
        X
      </strong>
    </span>
  </div>
</div>
`;

exports[`FlashMessage When there are no messages in the store Should not render 1`] = `
<div
  className="flash-message"
/>
`;

exports[`FlashMessage When there is a message in the store Should render, wait for 3 seconds, then stop rendering 1`] = `
<div
  className="flash-message"
>
  <div
    className="alert alert-error"
  >
    <p />
    <li>
      Invalid email
    </li>
    <span
      className="close"
      data-test="close-flash-message"
      onClick={[Function]}
    >
      <strong>
        X
      </strong>
    </span>
  </div>
</div>
`;

exports[`FlashMessage When there is a message in the store Should render, wait for 3 seconds, then stop rendering 2`] = `
<div
  className="flash-message"
/>
`;

exports[`FlashMessage when there are multiple messages in the store Should render, wait for 3 seconds, then stop rendering 1`] = `
<div
  className="flash-message"
>
  <div
    className="alert alert-error"
  >
    <p />
    <ul>
      <li
        key="0"
      >
        Invalid email
      </li>
      <li
        key="1"
      >
        invalid username
      </li>
    </ul>
    <span
      className="close"
      data-test="close-flash-message"
      onClick={[Function]}
    >
      <strong>
        X
      </strong>
    </span>
  </div>
</div>
`;

exports[`FlashMessage when there are multiple messages in the store Should render, wait for 3 seconds, then stop rendering 2`] = `
<div
  className="flash-message"
/>
`;
